fix: fix api endpoints for maintainer and maintenance_report POST, PUT, DELETE of maintenance_report un-fixed
